--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -39,6 +39,9 @@ html{
     background: var(--amarelo);
 }
 
+
+
+
 button {
     color: var(--branco);
     background-color: var(--amarelo);
@@ -57,6 +60,7 @@ button:hover{
 }
 
 section{
+    width: 100%;
     position: relative;
 }
 
@@ -196,7 +200,7 @@ section{
 
 .quem-somos__conteudo{
     padding: 2% 4dvw;
-    width: 60%;
+    width: 70%;
 }
 
 .quem-somos__conteudo h2{
@@ -214,12 +218,12 @@ section{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 40%;
+    width: 30%;
     height: 100%;
 }
 
 .quem-somos__imagem img{
-    height: 90%;
+    width: 90%;
 }
 
 
@@ -380,7 +384,7 @@ section{
 
 
 .redes{
-    width: inherit;
+    width: 100%;
     height: 35dvh;
 }
 
@@ -543,4 +547,113 @@ footer #codelab{
 
 body.no-scroll {
     overflow: hidden;
+}
+
+@media (max-width:1600px){
+    *{
+        font-size: smaller;
+    }
+
+    .container-background-blue, .container-background-white{
+        font-size: 2rem;
+    }
+}
+
+
+@media (max-width: 1300px){
+    .inicio__conteudo .baloes img{
+        margin-right: 5%;
+        height: 85%;
+
+    }
+
+    .inicio__conteudo .baloes {
+        display: flex;
+        flex-direction: row;
+        align-items: end;
+        justify-content: end;
+    }
+
+    .quem-somos {
+        height: fit-content;
+    }
+
+    .quem-somos .container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .quem-somos__conteudo{
+        width: 100%;
+    }
+    .quem-somos__imagem {
+        width: 50dvw;
+        height: 50dvw;
+    }
+
+    .midia {
+        height: fit-content;
+    }
+
+    .midia .container {
+        justify-content: flex-start;
+        padding-top: 2rem;
+    }
+
+    .midia .container .midia__caixas{
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .premiacoes {
+    height: fit-content;
+    }
+
+    .premiacoes .container {
+        justify-content: flex-start;
+        padding-top: 2rem;
+    }
+
+    .premiacoes .container .premiacoes__premios {
+        flex-wrap: wrap;
+    }
+}
+
+@media (max-width: 1150px){
+    .inicio__conteudo .baloes img{
+        margin-right: 5%;
+        height: 70%;
+    }
+
+    .inicio__conteudo .introducao{
+        width: 70%;
+    }
+
+    .inicio__conteudo .baloes {
+        display: flex;
+        flex-direction: row;
+        align-items: end;
+        justify-content: end;
+        width: 30%;
+    }
+}
+
+@media (max-width: 1000px){
+    .inicio__conteudo .baloes img{
+        display: none;
+    }
+
+    .inicio__conteudo .introducao{
+        width: 100%;
+    }
+
+    .inicio__conteudo .baloes {
+        display: none;
+    }
+
+    .quem-somos__imagem {
+        width: 70dvw;
+        height: 70dvw;
+    }
 }
