--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -61,43 +61,19 @@ button:hover{
 
 section{
     width: 100%;
-    position: relative;
-}
-
-.container{
-    width: 100%;
-    position: absolute;
-    z-index: 1;
-}
-
-.container-background-blue{
-    color: var(--azul-primario);
-    width: inherit;
-    height: inherit;
-    overflow: hidden;
-    font-weight: 700;
-    font-size: 2rem;
-    line-height: 3rem;
-    background-color: var(--bg-azul);
-    padding: 1%;
-}
-
-.container-background-white{
-    color: var(--text-bege-dark);
-    width: inherit;
-    height: inherit;
-    overflow: hidden;
-    font-weight: 700;
-    font-size: 2rem;
-    line-height: 3rem;
-    background-color: var(--bg-bege);
     padding: 1%;
 }
 
 .inicio{
-    width: inherit;
     height: 100dvh;
     color: var(--text-bege);
+    background-color: var(--bg-azul);
+}
+
+.inicio .container {
+    width: 98%;
+    background-image: url(../images/bg\ blue.png);
+    background-repeat: repeat;
 }
 
 .inicio .container .menu{
@@ -187,8 +163,9 @@ section{
 
 
 .quem-somos{
-    width: inherit;
-    height: 70dvh;
+    height: fit-content;
+    background-color: var(--bg-bege);
+    
 }
 
 .quem-somos .container{
@@ -196,6 +173,10 @@ section{
     width: inherit;
     height: inherit;
     justify-content: space-between;
+    background-image: url(../images/bg\ white.png);
+    background-repeat: repeat;
+    width: 98%;
+    padding: 3rem 0;
 }
 
 .quem-somos__conteudo{
@@ -233,18 +214,22 @@ section{
 
 
 .midia {
-    width: 100%;
-    height: 70dvh;
+    background-color: var(--bg-azul);
+    height: fit-content;
 }
 
 .midia .container{
-    width: inherit;
     height: inherit;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-image: url(../images/bg\ blue.png);
+    background-repeat: repeat;
+    width: 98%;
+    padding: 3rem;
 }
+
 
 .midia .container h2 {
     color: var(--branco);
@@ -302,17 +287,21 @@ section{
 
 
 .premiacoes{
-    width: inherit;
-    height: 80dvh;
+
+    height: fit-content;
+    background-color: var(--bg-bege); 
 }
 
 .premiacoes .container {
-    width: 100%;
+    width: 98%;
     height: inherit;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-image: url(../images/bg\ white.png);
+    background-repeat: repeat;
+    padding: 3rem;
 }
 
 .premiacoes .container h2 {
@@ -384,17 +373,20 @@ section{
 
 
 .redes{
-    width: 100%;
-    height: 35dvh;
+    height: fit-content;
+    background-color: var(--azul-secundario);
 }
 
 .redes .container {
-    width: 100%;
+    width: 98%;
     height: inherit;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-image: url(../images/bg\ blue\ sec.png);
+    background-repeat: repeat;
+    padding: 3rem;
 }
 
 .redes .container h2{
@@ -440,7 +432,6 @@ section{
 
 
 footer {
-    position: relative;
     display: flex;
     justify-content: space-between;
     height: 12dvh;
@@ -549,16 +540,6 @@ body.no-scroll {
     overflow: hidden;
 }
 
-@media (max-width:1600px){
-    *{
-        font-size: smaller;
-    }
-
-    .container-background-blue, .container-background-white{
-        font-size: 2rem;
-    }
-}
-
 
 @media (max-width: 1300px){
     .inicio__conteudo .baloes img{
@@ -572,10 +553,6 @@ body.no-scroll {
         flex-direction: row;
         align-items: end;
         justify-content: end;
-    }
-
-    .quem-somos {
-        height: fit-content;
     }
 
     .quem-somos .container {
@@ -592,27 +569,9 @@ body.no-scroll {
         height: 50dvw;
     }
 
-    .midia {
-        height: fit-content;
-    }
-
-    .midia .container {
-        justify-content: flex-start;
-        padding-top: 2rem;
-    }
-
     .midia .container .midia__caixas{
         display: flex;
         flex-wrap: wrap;
-    }
-
-    .premiacoes {
-    height: fit-content;
-    }
-
-    .premiacoes .container {
-        justify-content: flex-start;
-        padding-top: 2rem;
     }
 
     .premiacoes .container .premiacoes__premios {
@@ -639,7 +598,7 @@ body.no-scroll {
     }
 }
 
-@media (max-width: 1000px){
+@media (max-width: 950px){
     .inicio__conteudo .baloes img{
         display: none;
     }
@@ -657,3 +616,44 @@ body.no-scroll {
         height: 70dvw;
     }
 }
+
+@media (max-width:500px){
+    .premiacoes__premios .premio {
+        width: 300px;
+        height: 250px;
+    }
+
+    .midia__caixas .caixa{
+        width: 85dvw;
+    }
+
+    .midia p{
+        text-align: center;
+    }
+
+    .redes {
+        text-align: center;
+    }
+
+    *{
+        font-size: smaller;
+    }
+}
+
+@media (max-width:400px){
+    .premiacoes__premios .premio {
+        width: 250px;
+        height: 250px;
+    }
+
+    .midia__caixas .caixa{
+        width: 85dvw;
+    }
+
+
+
+    *{
+        font-size: smaller;
+    }
+}
+
